# bbs

./: .gitignore  AGENTS.md  README.md  __main__.py  dev.kdl  dev.py  pyproject.toml  requirements.txt  servers.toml  test_roles.py  test_scroll.py  test_textual.py
bbs/: __init__.py  __main__.py  authentication.py  board.py  config_checker.py  core.py  functions.py  jwt.py  models.py  post.py  routes.py  site.py  tables.py  user.py
bbs/ex-files/: authentication.py  models.py  post.py  site.py
bbs_client/: api.py  app.py  auth.py  database.py  identities.py  servers.py
bbs_server/: __init__.py  core.py  core.py.orig  routes.py  tables.py
examples/supervisor_conf-d/: bbs.conf
jupyter/: piccolo-000-engine.ipynb
spec/: 000-interfaces.md  001-server-configuration.md  002-authentication.md
